# dataramp

./: .datahelprc  .editorconfig  .flake8  .gitignore  .gitinore  .pre-commit-config.yaml  .pylintrc  .travil.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.txt  Makefile  README.md  README.rst  check_requirements.py  config.txt  custom_logger.py  docker-compose.yml  info.py  lint.sh  logging_file.py  mypy.ini  push_pypi.sh  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml  run.sh  serve_docs.sh  setup.cfg  setup.py  strip_whitespaces.sh  tox.ini  upload_to_conda.sh
.github/workflows/: ci.yml  python-publish.yml
data_help/: common.py  create_project.py  eda.py  feature_engineering.py  logger.py  modelling.py  utils.py  visualize.py  vizualize.py
data_help/examples/: ex1.py  ex3.ipynb
datahelp/: __version__.py  create_project.py  eda.py  feature_engineering.py  helpers.py  info.py  information.py  modelling.py  outlier.py  timeseries.py  utils.py  version.py  visualize.py
datahelp/examples/: Untitled.ipynb  ex1.py  ex2.py  ex3.ipynb
datahelp/examples/.ipynb_checkpoints/: ex3-checkpoint.ipynb
datahelp/metrics/: classification.py  regression.py
datahelp/modeling/: models.py
dataplus/: models.py
dataramp/: Untitled.ipynb  __init__.py  cli.py  core.py  eval.py  exceptions.py  feature_engineering.py  load_data.py  model_train.py  model_train.py.obf  model_train.py.signed  models.py  outlier.py  quality_report.py  serialization.py  un.py  utils.py  validate_data.py  version.py  visualizer.py
dataramp/.ipynb_checkpoints/: core-checkpoint.py
docs/: README.md  quickstart.md  quickstart.rst
docs/source/: conf.py  index.rst
examples/: .gitignore  ex1.py
examples/hello-world/: README.md
examples/hello-world/src/notebooks/: ex.ipynb
examples/hello-world/src/notebooks/.ipynb_checkpoints/: ex-checkpoint.ipynb
requirements/: requirements.txt
