[tool.poetry]
name = "datahelp"
version = "0.1.0"
description = "Data science library for data science / data analysis teams"
authors = ["kimxons <kitongameshack9@gmail.com>"]

license = "LICENSE"
readme = "README.md"

homepage = "https://github.com/Kimxons/datahelp/"
repository = "https://github.com/Kimxons/datahelp/"
documentation = "https://github.com/Kimxons/datahelp/"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
nltk = "^3.8.1"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
nltk = "^3.8.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
