[project]
name = "dataramp"
description = "A Data science library for data science / data analysis teams"
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
authors = [
    {name = "Meshack Kitonga", email = "kitongameshack9@gmail.com"}
]
maintainers = [
    {name = "Meshack Kitonga", email = "kitongameshack9@gmail.com"}
]
keywords = ["data science", "machine learning", "data analysis"]
license = {file = "LICENSE"}
requires-python = ">=3.7,<4"
dependencies = [
    "numpy >= 1.22.0",
    "pandas >= 1.5.0, < 2.1.0",
    "scipy >= 1.5.0, < 1.12.0",
    "scikit-learn >= 1.3.0",
    "scikit-optimize >= 0.9.0",
    "pyzmq >= 20.0.0",
    "shap >= 0.42.0",
    "statsmodels >= 0.12.2",
    "plotly >= 5.0.0",
    "seaborn >= 0.11.1",
    "category-encoders >= 2.2.2, <= 2.5.1.post0",
    "lime >= 0.2.0.1",
    "tomli >= 2.0.1",
    "packaging >= 23.0",
    "black[jupyter] >= 22.3.0",
    "joblib",
    "pyarrow",
    "click",
    "fasteners",
]

[project.urls]
Documentation = "https://github.com/Kimxons/dataramp/tree/main/docs"
"Source Code" = "https://github.com/Kimxons/dataramp"
Changes = "https://github.com/dataramp/en/latest/release_notes.html"
"Issue Tracker" = "https://github.com/Kimxons/dataramp/issues"

[project.optional-dependencies]
test = [
    "pytest == 7.1.2",
    "pytest-xdist == 2.1.0",
    "pytest-timeout == 1.4.2",
    "pytest-cov == 2.10.1",
    "nbval == 0.9.3",
    "IPython >= 8.10.0, <8.12.1",
    "PyYAML == 5.4",
    "coverage[toml] >= 6.4",
]
dev = [
    "ruff == 0.0.228",
    "darglint == 1.8.0",
    "pre-commit >= 2.20.0",
    "dataramp[docs,test]",
]
docs = [
    "docutils >=0.15.2, < 0.17",
    "pydata-sphinx-theme >= 0.3.1",
    "astroid <= 2.6.6",
    "Sphinx >= 4.5.0",
    "nbconvert >= 6.4.5",
    "nbsphinx >= 0.8.5, < 0.9.0",
    "sphinx-autoapi",
    "sphinx-inline-tabs == 2022.1.2b11",
    "sphinx-copybutton == 0.4.0",
    "myst-parser == 0.16.1",
]
prophet = [
    "prophet >= 1.1.2",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__/*",
    "*.py[co]",
    "docs/*"
]

[tool.setuptools.dynamic]
version = {attr = "dataramp.__version__"}

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = [
    "D",
    "F",
    "E",
    "W",
    "I001"
]
ignore = ["E501", "D107", "D401"]
src = ["dataramp"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "I001", "E501"]
"dataramp/tests/**" = ["D"]
"dataramp/utils/**" = ["D"]
".github/**" = ["D"]
"docs/**" = ["D"]

[tool.ruff.isort]
known-first-party = ["dataramp"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["dataramp"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "if profile:",
    "pytest.skip"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "dataramp/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
