[metadata]
name = datahelp
version = 1.1.0
description = Your Python Data Science companion.
author = Meshack Kimwele
author_email = dev.kitonga@gmail.com
license = mit
url = https://github.com/datahelp
project_urls =
    Documentation = https://github.com/datahelp/
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = datahelp
exclude =
    tests

install_requires = numpy; scipy
tests_require = pytest; pytest-cov
python_requires = >=3.7

testing =
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov pyforest --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[isort]
profile = black
known_third_party = your_third_party_module
