[bdist_wheel]
universal = false

[isort]
# isort configuration:
# https://github.com/PyCQA/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
# Seehttps://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 4
skip = ./build, ./docs
not_skip = __init__.py
known_first_party = datahelp
line_length = 80

# Excluding some directories:
exclude =
  .git
  __pycache__
  .venv
  .eggs
  *.egg

[flake8]
# Base flake8 configuration:
# https://flake8.pycqa.org/en/latest/user/configuration.html
max-line-length = 88
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[metadata]
license_files = LICENSE.txt

[coverage:run]
branch = True
source =
    datahelp
    tests/

[coverage:report]
precision = 1
exclude_lines =
    pragma: no cover
    abc.abstractmethod

[tool:pytest]
python_files = *.py
testpaths = datahelp